updates to mini-capstone

--- a/app/views/vinyls/artist.html.erb
+++ b/app/views/vinyls/artist.html.erb
@@ -1,6 +1,8 @@
+<h1>Records For Sale</h1>
+
 <h1><%= @artist.artist_name %></h1>
 <h2><%= @artist.record_title %></h2>
 <h3><%= @artist.genre %></h3>
 <h3><%= @artist.description %></h3>
-<h3><%= "#{@artist.playtime} min" %></h3>
+<h3><%= @artist.playtime %> min</h3>
 <h3><%= @artist.label %></h3>
