updates to mini-capstone

--- a/app/views/vinyls/new.html.erb
+++ b/app/views/vinyls/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Please enter your LPs or 45s wishlist:</h1>
+<h1>Please enter an LP or 45:</h1>
 
 <%= form_tag '/vinyls', method: :post do %>
   <div>
