--- a/app/views/vinyls/show.html.erb
+++ b/app/views/vinyls/show.html.erb
@@ -5,3 +5,9 @@
 <h4>Play Time: <%= "#{@vinyl.playtime} min" %></h4>
 <h4>Record Label: <%= @vinyl.label %></h4>
 <h4><%= "USD $ #{@vinyl.price}" %></h4>
+
+<%= link_to 'Home', '/vinyls' %>
+<br>
+<%= link_to 'Edit', "/vinyls/#{@vinyl.id}/edit" %>
+<br>
+<%= link_to 'Delete', "/vinyls/#{@vinyl.id}", method: :delete %>
