--- a/app/views/vinyls/new.html.erb
+++ b/app/views/vinyls/new.html.erb
@@ -22,8 +22,8 @@
   </div>
 
   <div>
-    <%= label_tag :playtime %>
-    <%= text_field_tag :playtime %>
+    <%= label_tag :image_url %>
+    <%= text_field_tag :image_url %>
   </div>
 
   <div>
