--- a/app/assets/stylesheets/vinyls.scss
+++ b/app/assets/stylesheets/vinyls.scss
@@ -6,3 +6,11 @@ body {
   font-family: "Franklin Gothic Medium","Franklin Gothic","ITC Franklin Gothic",Arial,sans-serif;
   background-image: url('seigaiha.png');
 }
+
+h2 {
+  color: #555;
+}
+
+h5 {
+  font-style: italic;
+}
