--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,21 +40,31 @@
               </ul>
             </li> -->
           </ul>
+          
           <form class="navbar-form navbar-left">
             <div class="form-group">
-              <input type="text" class="form-control" placeholder="Search">
+          <!--     <input type="text" class="form-control" placeholder="Search">
             </div>
             <button type="submit" class="btn btn-default">Submit</button>
-          </form>
+          </form> -->
+
+          <%= form_tag '/vinyls', method: :get do %>
+            <div>
+              <%= text_field_tag :search_term, nil, placeholder: "Search", class: "form-control" %>
+            </div>
+            <%= submit_tag 'Submit', class: "btn btn-default" %>
+          <% end %>
+
           <ul class="nav navbar-nav navbar-right">
             <li><a href="/vinyls/chat">Visit Us</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Learn More<span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="http://reckless.com/wordpress/">The Blog</a></li>
-                <li><a href="#">Twitter</a></li>
-                <li><a href="#">Facebook</a></li>
-                <li><a href="#">Instagram</a></li>
+                <li><a href="/vinyls?sort=price">Sort Products By Price (Low To High)</a></li>
+                <li><a href="/vinyls?sort=price&sort_order=desc"> By Price(Sort By High To Low)</a></li>
+                <li><a href="/vinyls?discount=18">Discount Items</a></li>
+                <li><a href="/vinyls/random %>">Random Items</a></li>
                 <li role="separator" class="divider"></li>
                 <li><a href="https://reckless.co.uk/">Reckless in London</a></li>
               </ul>
