added the Supplier table updates

--- a/app/views/vinyls/show.html.erb
+++ b/app/views/vinyls/show.html.erb
@@ -16,4 +16,5 @@
 <%= link_to 'Edit', "/vinyls/#{@vinyl.id}/edit" %>
 <br>
 <%= link_to 'Delete', "/vinyls/#{@vinyl.id}", method: :delete %>
+<p>Supplied By: <%= @supplier %></p>
 </section>
