new updates, authentication and authorizations

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -66,6 +66,9 @@
                 <li><a href="/vinyls?discount=18">Discount Items</a></li>
                 <li><a href="/vinyls/random %>">Random Items</a></li>
                 <li role="separator" class="divider"></li>
+                <li><a href="/signup %>">Sign Up</a></li>
+                <li><a href="/login %>">Log In</a></li>
+                <li><%= link_to 'Log Out', '/logout', method: :delete %></li>
                 <li><a href="https://reckless.co.uk/">Reckless in London</a></li>
               </ul>
             </li>
