--- a/app/views/vinyls/show.html.erb
+++ b/app/views/vinyls/show.html.erb
@@ -28,7 +28,7 @@
     <%= text_field_tag :user_id %>
   </div>
     <div>
-    <%= hidden_field_tag :vinyl_id, @product.id %>
+    <%= hidden_field_tag :vinyl_id, @vinyl.id %>
   </div>
   <div>
     <%= text_field_tag :quantity, nil, placeholder: "Quantity" %>
