--- a/app/views/vinyls/index.html.erb
+++ b/app/views/vinyls/index.html.erb
@@ -1,13 +1,15 @@
 <div class="row">
 <% @vinyls.each do |vinyl| %>
   <div class="col-md-12">
-    <h2><%= link_to vinyl.artist_name, "/vinyls/#{vinyl.id}" %></h2>
+    <div class="vinyl-single"></h2>
+    <h2 class="vinyl_header"><%= vinyl.artist_name %></h2>
+    <p>Price: <%= number_to_currency(vinyl.price) %></p>
+    <a href="/vinyls/<%= vinyl.id %>"><%= vinyl.artist_name %></a>
     <h2>Album Title: <%= vinyl.record_title %></h2>
     <h4>Genre: <%= vinyl.genre %></h4>
     <h4>Description: <%= vinyl.description %></h4>
     <h4>Playtime: <%= vinyl.friendly_playtime %></h4>
     <h4>Record Label: <%= vinyl.label %></h4>
-    <h4>USD $ <%= vinyl.price %></h4>
     <h5>Added To Reckless Inventory On: <%= vinyl.friendly_updated_at %>
   </div>
 <% end %>
