made updates but the images don't link the right way

--- a/app/views/vinyls/edit.html.erb
+++ b/app/views/vinyls/edit.html.erb
@@ -31,6 +31,12 @@
     <%= text_field_tag :label, @vinyl.label %>
   </div>
 
+   <div>
+    <%= label_tag :img_url %>
+    <%= text_field_tag :img_url, @vinyl.image %>
+  </div>
+
+
   <div>
     <%= label_tag :price %>
     <%= text_field_tag :price, @vinyl.price %>
