--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -73,8 +73,8 @@
                 <% end %>
 
                 <li class="divider"></li>
-                <li><a href="/signup %>">Sign Up</a></li>
-                <li><a href="/login %>">Log In</a></li>
+                <li><a href="/signup">Sign Up</a></li>
+                <li><a href="/login">Log In</a></li>
                 <li><%= link_to 'Log Out', '/logout', method: :delete %></li>
                 <li><a href="https://reckless.co.uk/">Reckless in London</a></li>
               </ul>
