--- a/app/views/vinyls/index.html.erb
+++ b/app/views/vinyls/index.html.erb
@@ -1,10 +1,8 @@
 <div class="row">
 <% @vinyls.each do |vinyl| %>
   <div class="col-md-12">
-    <div class="vinyl-single"></h2>
-    <h2 class="vinyl_header"><%= vinyl.artist_name %></h2>
+    <h2><a href="/vinyls/<%= vinyl.id %>"><%= vinyl.artist_name %></a></h2>
     <p>Price: <%= number_to_currency(vinyl.price) %></p>
-    <a href="/vinyls/<%= vinyl.id %>"><%= vinyl.artist_name %></a>
     <h2>Album Title: <%= vinyl.record_title %></h2>
     <h4>Genre: <%= vinyl.genre %></h4>
     <h4>Description: <%= vinyl.description %></h4>
