in the middle of step 7

--- a/app/views/vinyls/show.html.erb
+++ b/app/views/vinyls/show.html.erb
@@ -37,6 +37,6 @@
     <%= text_field_tag :quantity, nil, placeholder: "Quantity" %>
   </div>
   <div>
-    <%= submit_tag 'Buy Now' %>
+    <%= submit_tag 'Add To Cart' %>
   </div> 
 <% end %>
