updates but having trouble getting my carted products view

--- a/app/views/vinyls/show.html.erb
+++ b/app/views/vinyls/show.html.erb
@@ -25,7 +25,7 @@
 </section>
 
 <h1>Buy Vinyl</h1>
-<%= form_tag '/orders', method: :post do %>
+<%= form_tag '/carted_products', method: :post do %>
   <div>
     <%= label_tag :user_id %>
     <%= text_field_tag :user_id %>
