--- a/app/views/vinyls/show.html.erb
+++ b/app/views/vinyls/show.html.erb
@@ -27,16 +27,12 @@
 <h1>Buy Vinyl</h1>
 <%= form_tag '/carted_products', method: :post do %>
   <div>
-    <%= label_tag :user_id %>
-    <%= text_field_tag :user_id %>
-  </div>
-    <div>
     <%= hidden_field_tag :vinyl_id, @vinyl.id %>
   </div>
   <div>
     <%= text_field_tag :quantity, nil, placeholder: "Quantity" %>
   </div>
   <div>
-    <%= submit_tag 'Add To Cart' %>
+    <%= submit_tag 'Add To Cart', class:"btn btn-success" %>
   </div> 
 <% end %>
