updates to Carted Products

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -75,6 +75,7 @@
                 <li class="divider"></li>
                 <li><a href="/signup">Sign Up</a></li>
                 <li><a href="/login">Log In</a></li>
+                <!-- update here -->
                 <li><%= link_to 'Log Out', '/logout', method: :delete %></li>
                 <li><a href="https://reckless.co.uk/">Reckless in London</a></li>
               </ul>
