--- a/app/views/vinyls/new.html.erb
+++ b/app/views/vinyls/new.html.erb
@@ -1,14 +1,18 @@
+<% @vinyl.errors.full_messages.each do |error| %>
+  <h2><%= error %></h2>
+<% end %>
+
 <h1>Please enter an LP or 45:</h1>
 
 <%= form_tag '/vinyls', method: :post do %>
   <div>
     <%= label_tag :artist_name %>
-    <%= text_field_tag :artist_name %>
+    <%= text_field_tag :artist_name, @vinyl.artist_name %>
   </div>
 
   <div>
     <%= label_tag :record_title %>
-    <%= text_field_tag :record_title %>
+    <%= text_field_tag :record_title, @vinyl.record_title %>
   </div>
 
   <div>
