pushing to heroku

--- a/app/views/vinyls/show.html.erb
+++ b/app/views/vinyls/show.html.erb
@@ -1,3 +1,7 @@
+<div class="container">
+  <span><b>REALLY GOOD MUSIC WARNING:</b>{</span><span class="heart">heart beats</span>
+  <span>to music purchased}</span>
+</div>
 <section>
 <h2>Artist: <%= @vinyl.artist_name %>
 <p>Album Title: <%= @vinyl.record_title %></h2>
