--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">The New Reckless Records</a>
+          <a class="navbar-brand" href="/">Reckless Makeover</a>
           <!-- <a><%= current_user %></a> -->
         </div>
 
