--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -78,6 +78,9 @@
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
     </nav>
+    <div class="hero-image">
+    
+    </div>
     <div class="container">    
       <% flash.each do |name, message| %>
         <div class="alert alert-<%= name %> alert-dismissible" role="alert">
