--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -88,9 +88,9 @@
         <span aria-hidden="true">&times;</span></button><%= message %></div>
     </div>
     <% end %>
-
-    <%= link_to 'New Vinyl', '/vinyls/new' %>
-
+    <div class="container">
+      <%= link_to 'New Vinyl', '/vinyls/new' %>
+    </div>
     <%= yield %>
   </body>
 </html>
