Included animated New Vinyl link feature on homepage

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -89,7 +89,9 @@
     </div>
     <% end %>
     <div class="container">
+      <button class="hover-feature">
       <%= link_to 'New Vinyl', '/vinyls/new' %>
+      </button>
     </div>
     <%= yield %>
   </body>
