--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -89,7 +89,7 @@
     </div>
     <% end %>
     <div class="container">
-      <button class="hover-feature">
+      <button class="new-vinyl">
       <%= link_to 'New Vinyl', '/vinyls/new' %>
       </button>
     </div>
