fix indentation and New Vinyl button

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -89,9 +89,7 @@
     </div>
     <% end %>
     <div class="container">
-      <button class="new-vinyl">
-      <%= link_to 'New Vinyl', '/vinyls/new' %>
-      </button>
+      <span><%= link_to 'New Vinyl', '/vinyls/new', class:"btn btn-default" %></span>
     </div>
     <%= yield %>
   </body>
