--- a/app/views/vinyls/edit.html.erb
+++ b/app/views/vinyls/edit.html.erb
@@ -1,49 +1,51 @@
-<h1>Edit Your Vinyl Data</h1>
+<div class="container">
+  <h1>Edit Your Vinyl Data</h1>
 
-<%= form_tag "/vinyls/#{ @vinyl.id }", method: :patch do %>
-  <div>
-    <%= label_tag :artist_name %>
-    <%= text_field_tag :artist_name, @vinyl.artist_name %>
-  </div>
-  
-  <div>
-    <%= label_tag :record_title %>
-    <%= text_field_tag :record_title, @vinyl.record_title %>
-  </div>
+  <%= form_tag "/vinyls/#{ @vinyl.id }", method: :patch do %>
+    <div>
+      <%= label_tag :artist_name %>
+      <%= text_field_tag :artist_name, @vinyl.artist_name %>
+    </div>
+    
+    <div>
+      <%= label_tag :record_title %>
+      <%= text_field_tag :record_title, @vinyl.record_title %>
+    </div>
 
-  <div>
-    <%= label_tag :genre %>
-    <%= text_field_tag :genre, @vinyl.genre %>
-  </div>
+    <div>
+      <%= label_tag :genre %>
+      <%= text_field_tag :genre, @vinyl.genre %>
+    </div>
 
-  <div>
-    <%= label_tag :description %>
-    <%= text_field_tag :description, @vinyl.description %>
-  </div>
+    <div>
+      <%= label_tag :description %>
+      <%= text_field_tag :description, @vinyl.description %>
+    </div>
 
-  <div>
-    <%= label_tag :playtime %>
-    <%= text_field_tag :playtime, @vinyl.playtime %>
-  </div>
+    <div>
+      <%= label_tag :playtime %>
+      <%= text_field_tag :playtime, @vinyl.playtime %>
+    </div>
 
-  <div>
-    <%= label_tag :label %>
-    <%= text_field_tag :label, @vinyl.label %>
-  </div>
+    <div>
+      <%= label_tag :label %>
+      <%= text_field_tag :label, @vinyl.label %>
+    </div>
 
-   <div>
-    <%= label_tag :img_url %>
-    <%= text_field_tag :img_url, @vinyl.image %>
-  </div>
+     <div>
+      <%= label_tag :img_url %>
+      <%= text_field_tag :img_url, @vinyl.image %>
+    </div>
 
 
-  <div>
-    <%= label_tag :price %>
-    <%= text_field_tag :price, @vinyl.price %>
-  </div>
-  <br>
-  <div>
-    <%= submit_tag "Ok, please update my album." %>
-  </div>
+    <div>
+      <%= label_tag :price %>
+      <%= text_field_tag :price, @vinyl.price %>
+    </div>
+    <br>
+    <div>
+      <%= submit_tag "Ok, please update my album." %>
+    </div>
 
-<% end %>
+  <% end %>
+</div>
