--- a/app/views/vinyls/new.html.erb
+++ b/app/views/vinyls/new.html.erb
@@ -1,46 +1,48 @@
-<% @vinyl.errors.full_messages.each do |error| %>
-  <h2><%= error %></h2>
-<% end %>
+<div class="container">
+  <% @vinyl.errors.full_messages.each do |error| %>
+    <h2><%= error %></h2>
+  <% end %>
 
-<h1>Please enter an LP or 45:</h1>
+  <h1>Please enter an LP or 45:</h1>
 
-<%= form_tag '/vinyls', method: :post do %>
-  <div>
-    <%= label_tag :artist_name %>
-    <%= text_field_tag :artist_name, @vinyl.artist_name %>
-  </div>
+  <%= form_tag '/vinyls', method: :post do %>
+    <div>
+      <%= label_tag :artist_name %>
+      <%= text_field_tag :artist_name, @vinyl.artist_name %>
+    </div>
 
-  <div>
-    <%= label_tag :record_title %>
-    <%= text_field_tag :record_title, @vinyl.record_title %>
-  </div>
+    <div>
+      <%= label_tag :record_title %>
+      <%= text_field_tag :record_title, @vinyl.record_title %>
+    </div>
 
-  <div>
-    <%= label_tag :genre %>
-    <%= text_field_tag :genre %>
-  </div>
+    <div>
+      <%= label_tag :genre %>
+      <%= text_field_tag :genre %>
+    </div>
 
-  <div>
-    <%= label_tag :description %>
-    <%= text_field_tag :description %>
-  </div>
+    <div>
+      <%= label_tag :description %>
+      <%= text_field_tag :description %>
+    </div>
 
-  <div>
-    <%= label_tag :image_url %>
-    <%= text_field_tag :image_url %>
-  </div>
+    <div>
+      <%= label_tag :image_url %>
+      <%= text_field_tag :image_url %>
+    </div>
 
-  <div>
-    <%= label_tag :label %>
-    <%= text_field_tag :label %>
-  </div>
+    <div>
+      <%= label_tag :label %>
+      <%= text_field_tag :label %>
+    </div>
 
-  <div>
-    <%= label_tag :price %>
-    <%= text_field_tag :price %>
-  </div>
-  <br>
-  <div>
-    <%= submit_tag "I Want To Buy This Album" %>
-  </div>
-<% end %>
+    <div>
+      <%= label_tag :price %>
+      <%= text_field_tag :price %>
+    </div>
+    <br>
+    <div>
+      <%= submit_tag "I Want To Buy This Album" %>
+    </div>
+  <% end %>
+</div>
