updated nav bar

--- a/app/views/vinyls/chat.html.erb
+++ b/app/views/vinyls/chat.html.erb
@@ -1,17 +1,19 @@
-<h2>Location & Hours</h2>
-<h5>Please Note: Used buying is done from opening until one hour before closing time, every day of the week.</h5>
-<p><h3>Lakeview:</h3>
-<h4>3126 N Broadway
-<br>tel: 773-404-5080
-<br>Monday - Saturday: 10am - 10pm
-<br>Sunday: 10am - 8pm</h4></p>
-<p><h3>Wicker Park:</h3>
-<h4>1379 N Milwaukee Ave
-<br>tel: 773-235-3727
-<br>Monday - Saturday: 10am - 10pm
-<br>Sunday: 10am - 8pm</h4></p>
-<p><h3>Loop:</h3>
-<h4>26 E Madison
-<br>tel: 312-795-0878
-<br>Monday - Saturday: 10am - 8pm
-<br>Sunday: 10am - 7pm</h4></p>
+<div class="locations">
+  <h2>Location & Hours</h2>
+  <h5>Please Note: Used buying is done from opening until one hour before closing time, every day of the week.</h5>
+  <p><h3>Lakeview:</h3>
+  <h4>3126 N Broadway
+  <br>tel: 773-404-5080
+  <br>Monday - Saturday: 10am - 10pm
+  <br>Sunday: 10am - 8pm</h4></p>
+  <p><h3>Wicker Park:</h3>
+  <h4>1379 N Milwaukee Ave
+  <br>tel: 773-235-3727
+  <br>Monday - Saturday: 10am - 10pm
+  <br>Sunday: 10am - 8pm</h4></p>
+  <p><h3>Loop:</h3>
+  <h4>26 E Madison
+  <br>tel: 312-795-0878
+  <br>Monday - Saturday: 10am - 8pm
+  <br>Sunday: 10am - 7pm</h4></p>
+</div>
