--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,7 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="https://www.reckless.com/">Good Old Reckless<span class="sr-only">(current)</span></a></li>
             <li><a href="/vinyls/new">Special Order Form</a></li>
+            <li><a href="#">Our Story</a></li>
 <!--             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
               <ul class="dropdown-menu">
@@ -53,12 +54,11 @@
                 <li><a href="/vinyls?sort=price&sort_order=desc"> By Price(Sort By High To Low)</a></li>
                 <li><a href="/vinyls?discount=18">Discount Items</a></li>
                 <li><a href="/vinyls/random%>">Random Items</a></li>
-                
-                <li>CATEGORIES</li>
+                <li class="divider"></li>
+                <li class="indent">Categories</li>
                 <% Category.all.each do |category| %>
                   <li><a href="/vinyls?/category=<%= category %>"><%= category.name.titleize %> Records</a></li>
                 <% end %>
-
                 <li class="divider"></li>
                 <% if current_user %>
                   <li><%= link_to 'Log Out', '/logout', method: :delete %></li>
