fix syntax bugs

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="https://www.reckless.com/">Good Old Reckless<span class="sr-only">(current)</span></a></li>
+            <li class="active"><a href="https://www.reckless.com/">Past Reckless<span class="sr-only">(current)</span></a></li>
             <li><a href="/vinyls/new">Special Order Form</a></li>
             <li><a href="#">Our Story</a></li>
 <!--             <li class="dropdown">
