tone down link and Sass color variables

--- a/app/assets/stylesheets/vinyls.scss
+++ b/app/assets/stylesheets/vinyls.scss
@@ -8,7 +8,7 @@ $font-weight-headings: 900;
 $font-weight-body: 400;
 $font-weight-light: 300;
 
-$blue: #00F;
+$blue: #0645AD;
 $red: #F00;
 $yellow: #FF0;
 $grey: #555;
