--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="https://www.reckless.com/">Past Reckless<span class="sr-only">(current)</span></a></li>
             <li><a href="/vinyls/new">Special Order Form</a></li>
-            <li><a href="#">Our Story</a></li>
+            <li><a href="/story">Our Story</a></li>
 <!--             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
               <ul class="dropdown-menu">
