include Reckless R and adjust views :sparkles:

--- a/app/assets/stylesheets/vinyls.scss
+++ b/app/assets/stylesheets/vinyls.scss
@@ -46,6 +46,10 @@ h5 {
   margin-bottom: 10px;
 }
 
+.navbar-brand {
+  background-image: image-url('rr_small_banner.png');
+}
+
 .navbar-fixed-top {
   border:0;
 }
